--- a/wdb_core.info.yml
+++ b/wdb_core.info.yml
@@ -4,7 +4,7 @@ type: module
 description: 'Core services, configuration, and base functionality for the WDB application.'
 package: WDB
 core_version_requirement: ^10 || ^11
-version: 1.5.6
+version: 1.5.7
 dependencies:
   - drupal:taxonomy
   - drupal:content_translation
@@ -14,3 +14,4 @@ dependencies:
   - drupal:field_ui
   - drupal:jquery_ui
   - drupal:jquery_ui_dialog
+  - drupal:group
